<resources>
    <string name="app_name">Newspocket</string>
    <string name="app_domain">newspocket</string>
    <string name="newspocket_title">Newspocket</string>
    <string name="search_news_source">Search article</string>
    <string name="pocket_newspaper">Pocket newspaper</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_sources">News Sources</string>
    <string name="top_headline_from">Top headline from</string>
    <string name="news_source_filter">Source Filter</string>
    <string name="news_headline_filter">Headline Filter</string>
    <string name="search">Search</string>
    <string name="filter_by">Filter by</string>
    <string name="clear">Clear</string>
    <string name="search_headline">Search Headline</string>
    <string name="search_source">Search Source</string>
    <string name="filter">Filter</string>
    <string name="headline_keyword">Headline keyword</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="categories">Categories</string>
    <string name="sources">Sources</string>
</resources>