<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.xoxoer.newspocket.ui.viewmodels.NewsViewModel" />

        <variable
            name="sourceAdapter"
            type="com.xoxoer.newspocket.ui.adapters.SourceAdapter" />

        <variable
            name="headlineAdapter"
            type="com.xoxoer.newspocket.ui.adapters.HeadlineAdapter" />

        <variable
            name="llm"
            type="androidx.recyclerview.widget.LinearLayoutManager" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.xoxoer.newspocket.ui.activities.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeadlineHeadlineNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/newspocket_title"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/pocket_newspaper"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvHeadlineHeadlineNews"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvHeadlineHeadlineNews"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadlineHeadlineNews" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_search_source"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <EditText
                android:id="@+id/editTextSearchArticle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/search_news_source"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_search_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_headlines"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:padding="16dp"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="220dp"
                    app:showWhileLoading="@{vm.isLoading()}">

                    <LinearLayout
                        android:background="#95a5a6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/card_view_headlines"
                    android:visibility="gone"
                    app:hideWhileLoading="@{vm.isLoading()}"
                    app:adapterHeadline="@{headlineAdapter}"
                    app:adapterHeadlineList="@{vm.headlineSuccess}"
                    app:rvLLM="@{llm.HORIZONTAL}"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_sources"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:padding="16dp" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    app:showWhileLoading="@{vm.isLoading()}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:background="#95a5a6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="vertical"/>

                        <LinearLayout
                            android:background="#95a5a6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="vertical"/>

                        <LinearLayout
                            android:background="#95a5a6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="vertical"/>

                        <LinearLayout
                            android:background="#95a5a6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="vertical"/>

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/card_view_source"
                    android:visibility="gone"
                    app:hideWhileLoading="@{vm.isLoading()}"
                    app:adapterSource="@{sourceAdapter}"
                    app:adapterSourceList="@{vm.sourceSuccess}"
                    app:rvLLM="@{llm.VERTICAL}"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <include layout="@layout/layout_filter_source"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>